--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
-language: node_js
+language:
+  node_js
+install:
+  - npm install -g codecov
+script:
+  - istanbul cover _mocha -- --recursive -t 10000
+  - codecov
 node_js:
   - v7
   - v6
