--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language:
   node_js
 install:
   - npm install -g codecov
+  - npm install
 script:
   - istanbul cover _mocha -- --recursive -t 10000
   - codecov
