--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ install:
   - npm install -g codecov
   - npm install
 script:
-  - istanbul cover _mocha -- --recursive -t 10000
+  - istanbul cover  ./node_modules/.bin/_mocha -- --recursive -t 10000
   - codecov
 node_js:
-  - v7
   - v6
-  - v5
-  - v4
+  #- v6
+  #- v5
+  #- v4
 sudo: false
